2013-05-05
* fix unpacking inefficiency in generatelistrpm.py

2013-05-03
* add tons of more functions and variables that are part of various standards,
like LSB, or which are common system calls, or for some reason are in glibc or
uClibc (not complete yet)
* generate linking pictures in parallel

2013-05-02
* correctly resolve WEAK symbols in findlibs.py, add numbers to edges
indicating number of used symbols, make some edges dotted if all used symbols
are part of POSIX

2013-04-29
* work around squashfs unpacking crashes in some variants if 7zip compression
is used instead of lzma or zlib

2013-04-28
* add yet another variant of squashfs+lzma (for newer Broadcom devices) to
bat-extratools

2013-04-27
* add another variant of squashfs+lzma to bat-extratools

2013-04-26
* rename generate-version-chart.py, add extra parameter
* add more information to variable names report. This should actually have a
graphical representation
* replace bat-unyaffs with Python reimplementation

2013-04-24
* tag symbolic links, so there is no need to rely on the 'magic' attribute
anymore.
* remove use of 'magic' attribute as much as possible from the code
* search for kernel variables and print in a report. Needs more work.

2013-04-23
* add reimplementation for unyaffs which should not segfault, like the current
one sometimes does.

2013-04-19
* add tag 'linuxkernel' if an ELF file has a certain section only used for the
Linux kernel

2013-04-18
* update Ubuntu + Debian configuration
* tagging 13.0

2013-04-16
* make sure PNG check does not barf on broken PNG files
* fix unpacking of romfs
* fix filter in GUI

2013-04-15
* handle blacklists in ELF files differently. This is for Linux kernels that
are distributed as ELF files and have parts of the file blacklisted (initrd).
By extracting sections and checking if only the sections are blacklisted the
check can be more fine grained.

2013-04-10
* fix return value for forges

2013-04-02
* create index for origin in processed

2013-04-01